test/spec_vectors/local_tee/fail/module_18.wat
(module (func $type-param-arg-empty-vs-num-in-then (param i32) (i32.const 0) (i32.const 0) (if (then (local.tee 0) (drop)))))